--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -70,8 +70,8 @@ jobs:
           echo "GET /hello:"
           curl -s http://127.0.0.1:3000/hello
 
-          echo "GET /hello?name=Raj:"
-          curl -s "http://127.0.0.1:3000/hello?name=Raj"
+          echo "GET /hello?name=poorvi:"
+          curl -s "http://127.0.0.1:3000/hello?name=poorvi"
 
       - name: Stop local API
         if: always()
