--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,7 +71,7 @@ jobs:
           curl -s http://127.0.0.1:3000/hello
 
           echo "GET /hello?name=poorvi:"
-          curl -s "http://127.0.0.1:3000/hello?name=poorvi"
+          curl -s "http://127.0.0.1:3000/hello?a=10&b=20"
 
       - name: Stop local API
         if: always()
